cleaned up spacing issues

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -159,6 +159,13 @@ p {
   font-size: 17px;
 }
 
+ul {
+  color:#F4F4F4;
+}
+
+li {
+  color:#F4F4F4;
+}
 /* ------------------------------------------
   FIXED HEADER
 --------------------------------------------- */
